# CapacityOverhaulNG

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Resources/: BaseID Reference Sheet.txt  Template_CONG.toml  equations.md  logexpert regex.txt
Resources/Old Files/: BackpacksCC_CONG.json  CapacityOverhaulNG_ENGLISH.txt  config.json  settings.ini
SkyrimSE/Data/: CapacityOverhaulNG_KID.ini
SkyrimSE/Data/Interface/Translations/: CapacityOverhaulNG_ENGLISH.toml  CapacityOverhaulNG_TEMPLATE.toml
SkyrimSE/Data/MCM/Config/CapacityOverhaulNG/: settings.ini
SkyrimSE/Data/SKSE/Plugins/Capacity Overhaul NG/: BackpacksCC_CONG.toml  NirnNecessities_CONG.toml  default_settings.ini
SkyrimSE/Data/SKSE/Plugins/CapacityOverhaulNG/: default_settings.ini
SkyrimSE/Data/Source/Scripts/: CapacityOverhaulNG_MCM.psc
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
cmake/ports/skse-mcp/: portfile.cmake  vcpkg.json
include/: BuffsDebuffs.h  Calc.h  CapacityHandler.h  Events.h  ExtraStorage.h  FileHandler.h  FormHandler.h  GUIAssets.h  GUICustom.h  Hooks.h  MCP.h  MCPColour.h  MCPHeatmap.h  MCPHelpers.h  MCPStyle.h  MCPVisualiser.h  MCPWidgets.h  PCH.h  Papyrus.h  Player.h  Settings.h  Translations.h  Utils.h  WeightHandler.h
src/: BuffsDebuffs.cpp  Calc.cpp  CapacityHandler.cpp  Events.cpp  ExtraStorage.cpp  FileHandler.cpp  FormHandler.cpp  GUIAssets.cpp  GUICustom.cpp  Hooks.cpp  MCP.cpp  MCPColour.cpp  MCPHeatmap.cpp  MCPHelpers.cpp  MCPStyle.cpp  MCPVisualiser.cpp  MCPWidgets.cpp  Main.cpp  Papyrus.cpp  Player.cpp  Settings.cpp  Translations.cpp  Utils.cpp  WeightHandler.cpp
